--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -8,7 +8,47 @@
     right: 0;
     overflow: hidden;
   }
-  
+  hr{
+    margin-top:-30px;
+    margin-bottom: 30px;
+    margin-left: -10px;
+  }
+  h2{
+    font-size: 25px;
+    font-family: 'Helvetica Neue';
+    color: #ffd900;
+    font-weight: 300;
+    margin-top: -20px;
+    // position: relative;
+    // margin-bottom: 30px;
+    // left: -10px;
+  }
+  h3{
+    font-size: 20px;
+    color: red;
+    text-decoration: none;
+  text-transform: uppercase;
+  }
+  p{
+    font-size: 25px;
+    color: white;
+
+  }
+  h4{
+    font-size: 20px;
+    color: #ffd900;
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
+  a{
+    color: red;
+    font-weight: 500;
+  text-decoration: none;
+  }
+  li{
+    font-size: 15px;
+    font-weight: 300;
+  }
   .cubespinner {
     animation-name: spincube;
     animation-timing-function: ease-in-out;
